--- a/src/CardPullouter.Core/CardPullouter.Core.csproj
+++ b/src/CardPullouter.Core/CardPullouter.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="6.1.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.2.1" />
     <PackageReference Include="OperationResultCore" Version="4.0.0" />
